# relion

./: CMakeLists.txt  environment_blackwell.yml
cmake/: BuildTypes.cmake
src/: healpix_sampling.cpp  healpix_sampling.h  matrix1d.h  ml_model.h  ml_optimiser.cpp  ml_optimiser.h  ml_optimiser_mpi.cpp  ml_optimiser_mpi.h  ml_optimiser_mpi_modes.cpp  ml_optimiser_mpi_modes.h  motioncorr_runner.cpp  motioncorr_runner.h  multidim_array.h  numerical_recipes.h  projector.h  time.cpp
src/acc/: acc_backend.h  acc_backend_factory.h  acc_bundle.h  acc_ml_optimiser.h  acc_ml_optimiser_impl.h  acc_optimiser.h  acc_ptr.h  settings.h
src/acc/cpu/: cpu_backend.h  cpu_ml_optimiser.h
src/acc/cuda/: cuda_backend.h  cuda_event_pool.cpp  cuda_event_pool.h  cuda_ml_optimiser.h  cuda_pinned_pool.cpp  cuda_pinned_pool.h  cuda_settings.h  custom_allocator.cuh
src/acc/hip/: hip_ml_optimiser.h
src/acc/sycl/: sycl_backend.h  sycl_ml_optimiser.h
src/apps/: CMakeLists.txt  refine_mpi.cpp
src/jaz/scripts/: img_test.cpp
src/jaz/tomography/programs/: powspec.cpp
src/t2/src/: CPlot2D.cpp  CPlot2D.h  Healpix_2.15a  args.cpp  assembly.cpp  assembly.h  autopicker_mpi.h  backprojector.cpp  backprojector.h  batchrunner.cpp  batchrunner.h  batchrunner_mpi.cpp  batchrunner_mpi.h  complex.cpp  complex.h  ctf.cpp  ctf.h  ctffind_runner_mpi.h  error.cpp  error.h  euler.cpp  euler.h  fftw.cpp  fftw.h  filename.cpp  filename.h  flex_analyser.h  float16.h  funcs.cpp  funcs.h  gcc_version.h  gradient_optimisation.h  gui_mainwindow.h  healpix_sampling.cpp  healpix_sampling.h  helix.cpp  helix.h  helix_inimodel2d.cpp  helix_inimodel2d.h  image.cpp  (+67 more)
src/t2/src/acc/: acc_backprojector.h  acc_backprojector_impl.h  acc_boo.h  acc_coarse.h  acc_context.h  acc_fine.h  acc_helper_functions.h  acc_helper_functions_impl.h  acc_ml_optimiser.h  acc_ml_optimiser_impl.h  acc_projector_impl.h  acc_projector_plan.h  acc_projector_plan_impl.h  acc_projectorkernel_impl.h  acc_ptr.h  acc_store_weight_sum.h  cpu  data_types.h  hip  settings.h  sycl  utilities.h  utilities_impl.h
src/t2/src/acc/cpu/: cpu_benchmark_utils.h
src/t2/src/acc/cuda/: cuda_autopicker.cu  cuda_backprojector.cu  cuda_benchmark_utils.cu  cuda_benchmark_utils.h  cuda_fft.h  cuda_helper_functions.cu  cuda_mem_utils.h  cuda_ml_optimiser.cu  cuda_ml_optimiser.h  cuda_projector.cu  cuda_projector_plan.cu  cuda_settings.h  cuda_utils_cub.cuh  custom_allocator.cu  custom_allocator.cuh  helper_cuda.h  pinned_allocator.cu  pinned_allocator.cuh  shortcuts.cuh
src/t2/src/acc/cuda/cuda_kernels/: BP.cuh  coarse_scheduler.cuh  coarse_splitImg_BCF_PMO.cuh  copy_traits.cuh  cuda_device_utils.cuh  diff2.cuh  fine_scheduler.cuh  fine_splitImg_BCF_PMO.cuh  helper.cuh  kernel_block_params.cuh  mma_utils.cuh  orientation_matrix_handler.cuh  reg_bitmap.cuh  translation_matrix_handler.cuh  warp_layout.cuh  wavg.cuh
src/t2/src/apps/: CMakeLists.txt
tests/: CMakeLists.txt  test_acc_cuda.cu  test_args.cpp  test_assembly.cpp  test_backprojector.cpp  test_cplot2d.cpp  test_ctf.cpp  test_euler.cpp  test_exp_model.cpp  test_expectation_mpi.cpp  test_fftw.cpp  test_filename.cpp  test_float16.cpp  test_funcs.cpp  test_gravis_matrices.cpp  test_gravis_vectors.cpp  test_healpix_sampling.cpp  test_helix.cpp  test_image.cpp  test_local_symmetry.cpp  test_log.cpp  test_macros.cpp  test_mask.cpp  test_matrix1d.cpp  test_matrix2d.cpp  test_memory.cpp  test_metadata_table.cpp  test_ml_model.cpp  test_ml_optimiser.cpp  test_multidim_array.cpp  test_numerical_recipes.cpp  test_optimization.cpp  test_parallel.cpp  test_pipeline_control.cpp  test_projector.cpp  test_strings.cpp  test_symmetries.cpp  test_tabfuncs.cpp  test_transformations.cpp  test_zernike.cpp  (+1 more)
